fix: make button more visible

--- a/src/style.css
+++ b/src/style.css
@@ -74,8 +74,8 @@ body {
         color: var(--font-color);
         border-radius: 32px;
         padding: 0.2em 0.4em;
-        border: var(--font-color) solid 5px;
-        background-color: transparent;
+        border: var(--accent-color) solid 5px;
+        background-color: var(--accent-color);
         cursor: pointer;
     }
 }
